# crates/oneiron-server/tests/fixtures/v1_core_openapi_contract.snapshot.json
@@ -2609,6 +2609,12 @@
               "null"
             ]
           },
+          "l2_base": {
+            "type": [
+              "object",
+              "null"
+            ]
+          },
           "neighbors": {
             "items": {
               "$ref": "#/components/schemas/CoreContextEntity"
